--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
     <title>Mapbox GL Minimap</title>
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css">
-    <link rel="stylesheet" href="dist/styles.css">
-</head>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.13.0/mapbox-gl.css" />
+    <link rel="stylesheet" href="dist/styles.css" />
 
-<body>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
+  </head>
 
-    <div id="map" style="width: 1250px; height: 650px;"></div>
-    <script type="text/javascript" src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
+  <body>
+    <div id="map"></div>
+    <script type="text/javascript" src="https://api.mapbox.com/mapbox-gl-js/v1.13.0/mapbox-gl.js"></script>
     <script type="module" type="text/javascript" src="dist/index.js"></script>
 
     <script type="text/javascript">
+      mapboxgl.accessToken = 'pk.eyJ1IjoiYWJkdWxrMCIsImEiOiJjamx3YTd5MzAwZnpyM3BwZ2VlbzBzajNxIn0.sfaVEVrneShyyvSb6ddg2g';
 
-        mapboxgl.accessToken = "pk.eyJ1IjoiYWJkdWxrMCIsImEiOiJjamx3YTd5MzAwZnpyM3BwZ2VlbzBzajNxIn0.sfaVEVrneShyyvSb6ddg2g";
+      var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v8',
+        center: [-73.94656812952897, 40.72912351406106],
+        zoom: 10
+      });
 
-        var map = new mapboxgl.Map({
-            container: "map",
-            style: "mapbox://styles/mapbox/streets-v8",
-            center: [-73.94656812952897, 40.72912351406106],
-            zoom: 10
+      var minimap;
+
+      map.on('load', function () {
+        minimap = new mapboxgl.Minimap({
+          center: [-73.94656812952897, 40.72912351406106],
+          zoom: 6,
+          togglePosition: 'topleft'
         });
 
-        var minimap;
-
-        map.on("load", function () {
-            minimap = new mapboxgl.Minimap({
-                center: [-73.94656812952897, 40.72912351406106],
-                zoom: 6,
-                zoomLevels: [],
-                togglePosition: 'topleft'
-            });
-
-            map.addControl(minimap, 'bottom-right');
-        });
-
+        map.addControl(minimap, 'bottom-right');
+      });
     </script>
-
-</body>
-
+  </body>
 </html>
